# rust-example-api

./: .env  Cargo.toml  database.sql  docker-compose.yml
src/: config.rs  db.rs  errors.rs  handlers.rs  main.rs  models.rs
