[package]
name = "blog-api"
version = "0.1.0"
authors = ["viniciusataide <viniciusataid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0"
actix-rt = "1.0.0"
serde = { version = "1.0.115", features = ['derive'] }
dotenv = "0.15.0"
config = "0.10.1"
tokio-pg-mapper = "0.1.8"
tokio-pg-mapper-derive = "0.1.5"
deadpool-postgres = "0.5.6"
tokio-postgres = "0.5.5"
